force-app/main/default/objects/CC_Representante_Contrato__c/CC_Representante_Contrato__c.object-meta.xml
<CustomObject>
    <description>Representantes y contratos asociados a clientes.</description>
    <label>Representante y Contrato</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Identificador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Representantes y Contratos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>