force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_Apellido1__c.field-meta.xml
<CustomField>
    <fullName>CC_Apellido1__c</fullName>
    <description>Primer apellido del representante.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Apellido 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>