force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_CargoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>CC_CargoRepresentante__c</fullName>
    <description>Cargo del representante del cliente cuando el representante es de tipo apoderado.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cargo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>