force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_ClienteContrato__c.field-meta.xml
<CustomField>
    <fullName>CC_ClienteContrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cliente asociado al contrato.</description>
    <label>Cliente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contrato</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>CC_Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>