force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_ClienteRepresentante__c.field-meta.xml
<CustomField>
    <fullName>CC_ClienteRepresentante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cliente asociado al representante.</description>
    <label>Cliente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Representante</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Representantes</relationshipLabel>
    <relationshipName>CC_Representantes</relationshipName>
    <type>Lookup</type>
</CustomField>