force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_Contrato__c.field-meta.xml
<CustomField>
    <fullName>CC_Contrato__c</fullName>
    <description>Número de contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Número de contrato</inlineHelpText>
    <label>Contrato</label>
    <length>10</length>
    <type>Text</type>
</CustomField>