force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_ContratoAsociado__c.field-meta.xml
<CustomField>
    <fullName>CC_ContratoAsociado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contrato asociado al representante</description>
    <inlineHelpText>Contrato asociado al representante</inlineHelpText>
    <label>Contrato asociado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Representante_Contrato__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contrato</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Representante_Contrato__c</referenceTo>
    <relationshipLabel>Representantes y Contratos (Contrato asociado)</relationshipLabel>
    <relationshipName>Representantes_o_Contratos1_del</relationshipName>
    <type>Lookup</type>
</CustomField>