force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_ContratoAsociadoRep__c.field-meta.xml
<CustomField>
    <fullName>CC_ContratoAsociadoRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contrato asociado al representante</description>
    <inlineHelpText>Contrato asociado al representante</inlineHelpText>
    <label>Contrato asociado</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Representantes y Contratos</relationshipLabel>
    <relationshipName>Representantes_y_Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>