force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CC_Empresa__c</fullName>
    <description>Empresa del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Empresa del contrato</inlineHelpText>
    <label>Empresa</label>
    <length>5</length>
    <type>Text</type>
</CustomField>