force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_IdExterno__c.field-meta.xml
<CustomField>
    <fullName>CC_IdExterno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Identificador externo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>