force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_Inactivo__c.field-meta.xml
<CustomField>
    <fullName>CC_Inactivo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador si el representante o relación representante-contrato está inactivo</description>
    <inlineHelpText>Indicador si el representante o relación representante-contrato está inactivo</inlineHelpText>
    <label>Inactivo</label>
    <type>Checkbox</type>
</CustomField>