force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_NumeroDocumento__c.field-meta.xml
<CustomField>
    <fullName>CC_NumeroDocumento__c</fullName>
    <description>Número de documento del representante.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Número de documento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>