force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>CC_NumPerso__c</fullName>
    <description>NumPerso del representante.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NumPerso</label>
    <length>15</length>
    <type>Text</type>
</CustomField>