force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_NumPerso_Representante__c.field-meta.xml
<CustomField>
    <fullName>CC_NumPerso_Representante__c</fullName>
    <description>NumPerso del representante</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>NumPerso del representante</inlineHelpText>
    <label>NumPerso Representante</label>
    <length>15</length>
    <type>Text</type>
</CustomField>