force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_Oficina__c.field-meta.xml
<CustomField>
    <fullName>CC_Oficina__c</fullName>
    <description>Oficina del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Oficina del contrato</inlineHelpText>
    <label>Oficina</label>
    <length>5</length>
    <type>Text</type>
</CustomField>