force-app/main/default/objects/CC_Representante_Contrato__c/fields/CC_Representante__c.field-meta.xml
<CustomField>
    <fullName>CC_Representante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cuenta del representante</description>
    <label>Representante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Representantes y Contratos (Representante)</relationshipLabel>
    <relationshipName>Representantes_y_Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>