force-app/main/default/objects/CC_Representante_Contrato__c/recordTypes/CC_Contrato.recordType-meta.xml
<RecordType>
    <fullName>CC_Contrato</fullName>
    <active>true</active>
    <description>Contratos del cliente</description>
    <label>Contrato</label>
</RecordType>