force-app/main/default/objects/CC_Representante_Contrato__c/recordTypes/CC_Representante.recordType-meta.xml
<RecordType>
    <fullName>CC_Representante</fullName>
    <active>true</active>
    <description>Representantes</description>
    <label>Representante</label>
</RecordType>