force-app/main/default/objects/CC_Representante_Contrato__c/recordTypes/CC_RepresentanteContrato.recordType-meta.xml
<RecordType>
    <fullName>CC_RepresentanteContrato</fullName>
    <active>true</active>
    <description>Relación entre los diferentes representantes y contratos de un cliente</description>
    <label>Relación representante y contrato</label>
</RecordType>