force-app/main/default/objects/CC_Representante_Contrato__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CC_ClienteRepresentante__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>